--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "first-project",
   "scripts": {
-    "postinstall": "prisma generate && tsr generate",
+    "postinstall": "prisma generate && tsr generate && node scripts/postinstall-fix.js",
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
@@ -16,7 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.3",
     "@hookform/resolvers": "^5.1.1",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "6.13.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.66.0",
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.532.0",
     "minio": "^8.0.5",
+    "nitropack": "^2.9.6",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -42,7 +43,8 @@
     "superjson": "^2.2.2",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.4",
-    "vinxi": "0.5.3",
+    "unenv": "1.10.0",
+    "vinxi": "0.5.8",
     "vite": "^6",
     "vite-plugin-node-polyfills": "^0.23.0",
     "zod": "^3.25.0",
@@ -62,7 +64,7 @@
     "globals": "^16.0.0",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.5.0",
+    "prisma": "6.13.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.31.1",
     "vite-tsconfig-paths": "^5.1.4"
