--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "first-project",
   "scripts": {
-    "postinstall": "node -e \"require('fs').mkdirSync('src/generated/tanstack-router', { recursive: true })\" && prisma generate && tsr generate",
+    "postinstall": "prisma generate && tsr generate",
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "redaxios": "^0.5.1",
+    "semver": "^7.7.2",
     "superjson": "^2.2.2",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
