--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
   "buildCommand": "pnpm build",
-  "outputDirectory": ".output",
+  "outputDirectory": "dist", // or actual output dir with index.html
   "framework": null,
-  "build": {
-    "env": {
-      "PNPM_IGNORE_SCRIPTS": "false"
-    }
-  }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
