Fresh code from Scracting all previous

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "first-project",
   "scripts": {
-    "postinstall": "mkdir -p src/generated/tanstack-router && prisma generate && tsr generate",
+    "postinstall": "prisma generate && tsr generate",
     "dev": "vinxi dev",
-    "build": "vinxi build",
+    "build": "prisma migrate deploy && vinxi build",
     "start": "vinxi start",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . -c eslint.config.mjs --max-warnings 0",
@@ -14,59 +14,57 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.7",
-    "@hookform/resolvers": "^5.2.1",
-    "@prisma/client": "^6.13.0",
+    "@headlessui/react": "^2.2.3",
+    "@hookform/resolvers": "^5.1.1",
+    "@prisma/client": "^6.8.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@tanstack/react-query": "^5.84.1",
-    "@tanstack/react-router": "1.130.12",
-    "@tanstack/react-start": "1.130.15",
-    "@tanstack/router-cli": "^1.130.15",
-    "@tanstack/router-plugin": "1.130.15",
-    "@trpc/client": "^11.4.4",
-    "@trpc/server": "^11.4.4",
-    "@trpc/tanstack-react-query": "^11.4.4",
-    "autoprefixer": "^10.4.21",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.532.0",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-router": "^1.119.0",
+    "@tanstack/react-start": "^1.119.0",
+    "@tanstack/router-cli": "^1.119.0",
+    "@tanstack/router-plugin": "^1.119.0",
+    "@trpc/client": "^11.1.2",
+    "@trpc/server": "^11.1.2",
+    "@trpc/tanstack-react-query": "^11.1.2",
+    "autoprefixer": "^10.4.20",
     "minio": "^8.0.5",
-    "nitropack": "^2.12.4",
-    "postcss": "^8.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.62.0",
-    "react-hot-toast": "^2.5.2",
+    "postcss": "^8.5.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
     "redaxios": "^0.5.1",
     "superjson": "^2.2.2",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.3",
-    "unenv": "^1.10.0",
-    "vinxi": "0.5.8",
-    "vite": "^6.3.5",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.7"
+    "tsx": "^4.19.4",
+    "vinxi": "0.5.3",
+    "vite": "^6",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "zod": "^3.25.0",
+    "lucide-react": "^0.532.0",
+    "react-hot-toast": "^2.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^3.0.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@tanstack/eslint-plugin-router": "^1.130.12",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^22.17.0",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^4.7.0",
-    "eslint": "^9.32.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.3.0",
+    "@eslint/js": "^9.25.1",
+    "@tanstack/eslint-plugin-router": "^1.115.0",
+    "@types/node": "^22.5.4",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.25.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
     "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.13.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.5.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.31.1",
+    "vite-tsconfig-paths": "^5.1.4",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/bcryptjs": "^3.0.0"
   },
   "private": true,
   "type": "module"
