--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "first-project",
   "scripts": {
-    "postinstall": "prisma generate && tsr generate",
-    "dev": "vinxi dev",
-    "build": "prisma migrate deploy && vinxi build",
+    "postinstall": "prisma generate",
+    "prebuild": "node -e \"require('fs').mkdirSync('src/generated/tanstack-router', { recursive: true })\"",
+    "dev": "tsr generate --watch & vinxi dev",
+    "build": "prisma migrate deploy && tsr generate && vinxi build",
     "start": "vinxi start",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . -c eslint.config.mjs --max-warnings 0",
