--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-  "framework": null,
-  "installCommand": "corepack enable && corepack prepare pnpm@9.12.3 --activate && pnpm install --no-frozen-lockfile",
+  "build": {
+    "env": {
+      "NODE_VERSION": "20"
+    }
+  },
+  "installCommand": "corepack enable && corepack prepare pnpm@9.12.3 --activate && node -v && pnpm -v && pnpm install --no-frozen-lockfile",
   "buildCommand": "pnpm build",
-  "outputDirectory": ".vercel/output"
+  "framework": "vite"
 }
