fix(build): move Vite plugins to prod deps

--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-start": "^1.119.0",
     "@tanstack/router-cli": "^1.119.0",
-    "@tanstack/router-plugin": "^1.119.0",
+    "@tanstack/router-plugin": "^1.131.3",
     "@trpc/client": "^11.1.2",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
@@ -50,6 +51,7 @@
     "vinxi": "0.5.8",
     "vite": "^7.1.1",
     "vite-plugin-node-polyfills": "^0.24.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.25.0",
     "zustand": "^5.0.6"
   },
@@ -60,7 +62,6 @@
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.25.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
@@ -70,8 +71,7 @@
     "prisma": "^6.5.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.31.1",
-    "unenv": "^1.10.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "unenv": "^1.10.0"
   },
   "private": true,
   "type": "module"
