--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-start": "^1.119.0",
     "@tanstack/router-cli": "^1.119.0",
     "@tanstack/router-plugin": "^1.119.0",
+    "@vitejs/plugin-react": "4.7.0",
     "@trpc/client": "^11.1.2",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
@@ -50,6 +51,7 @@
     "vinxi": "0.5.8",
     "vite": "^7.1.1",
     "vite-plugin-node-polyfills": "^0.24.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.25.0",
     "zustand": "^5.0.6"
   },
@@ -60,7 +62,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "4.7.0",
     "eslint": "^9.25.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
