Changes to file handler.ts src/server/debug/client-logs-handler.ts src/trpc/client.ts src/main.tsx src/server/env.ts app.config.ts package.json and vercel.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "node -e \"console.log('skip prisma generate on Vercel')\"",
     "dev": "vinxi dev",
     "build": "vinxi build",
-    "start": "node .vinxi/server/index.mjs",
+    "start": "vinxi preview",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . -c eslint.config.mjs --max-warnings 0",
     "db:generate": "prisma migrate dev",
