--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@prisma/client": "^6.8.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query": "5.x",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-start": "^1.119.0",
     "@tanstack/router-cli": "^1.119.0",
     "@tanstack/router-plugin": "^1.119.0",
     "@vitejs/plugin-react": "4.7.0",
-    "@trpc/client": "^11.1.2",
-    "@trpc/server": "^11.1.2",
-    "@trpc/tanstack-react-query": "^11.1.2",
+    "@trpc/client": "11.4.4",
+    "@trpc/server": "11.4.4",
+    "@trpc/react-query": "11.4.4",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
