--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "first-project",
+  "private": true,
+  "type": "module",
   "packageManager": "pnpm@9.12.3",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
     "prebuild": "node -e \"require('fs').mkdirSync('src/generated/tanstack-router',{recursive:true})\" && tsr generate || true",
-    "postinstall": "node -e \"console.log('skip prisma generate on Vercel')\"",
+    "postinstall": "prisma generate",
     "dev": "vinxi dev",
-    "build": "vinxi build",
+    "build": "prisma generate && vinxi build",
+    "vercel-build": "prisma generate && vinxi build",
     "start": "vinxi preview",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . -c eslint.config.mjs --max-warnings 0",
@@ -21,7 +24,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.3",
     "@hookform/resolvers": "^5.1.1",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.13.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "5.x",
@@ -31,8 +34,8 @@
     "@tanstack/router-plugin": "^1.119.0",
     "@vitejs/plugin-react": "4.7.0",
     "@trpc/client": "11.4.4",
-    "@trpc/server": "11.4.4",
     "@trpc/react-query": "11.4.4",
+    "@trpc/server": "11.4.4",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
@@ -53,7 +56,8 @@
     "vite-plugin-node-polyfills": "^0.24.0",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.25.0",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "prisma": "^6.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
@@ -69,12 +73,9 @@
     "node-stdlib-browser": "^1.3.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.5.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.31.1",
     "unenv": "^1.10.0",
     "vite-tsconfig-paths": "^5.1.4"
-  },
-  "private": true,
-  "type": "module"
+  }
 }
