--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "postinstall": "prisma generate",
     "dev": "vinxi dev",
     "build": "prisma generate && vinxi build",
-    "prevercel-build": "node -e \"require('fs').mkdirSync('src/generated', { recursive: true })\"",
+    "prevercel-build": "node -e \"require('fs').mkdirSync('src/generated/tanstack-router',{recursive:true})\" && tsr generate",
     "vercel-build": "prisma generate && vinxi build",
-    "start": "vinxi preview",
+    "start": "vinxi dev",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . -c eslint.config.mjs --max-warnings 0",
     "db:generate": "prisma migrate dev",
