--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,41 @@
 {
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.mjs",
-    "**/*.cjs",
-    "**/*.js",
-    "**/*.jsx"
-  ],
+  "extends": ["@tsconfig/strictest/tsconfig.json"],
   "compilerOptions": {
-    "strict": true,
-    "noUncheckedIndexedAccess": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "target": "ESNext",
+    "target": "ES2022",
+    "lib": ["ES2023", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+
     "verbatimModuleSyntax": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "exactOptionalPropertyTypes": true,
+
+    "allowJs": false,
     "skipLibCheck": true,
-    "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "allowJs": true,
-    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "tsBuildInfoFile": ".tsbuildinfo",
+    "outDir": "dist",
+
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"],
-      "@/*": ["src/*"]
+      "~/*": ["./src/*"],
+      "@/*": ["./src/*"]
     },
-    "types": ["vite/client"],
-    "resolveJsonModule": true,
-    "noEmit": true
-  }
+
+    "types": ["vite/client", "vinxi/types"]
+  },
+  "include": [
+    "src",
+    "client",
+    "server",
+    "vite.config.ts",
+    "app.config.ts",
+    "tailwind.config.mjs",
+    "postcss.config.mjs",
+    "eslint.config.js"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
