--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "first-project",
   "scripts": {
-    "postinstall": "prisma generate && tsr generate",
+    "postinstall": "prisma generate && node -e \"require('fs').mkdirSync('src/generated/tanstack-router',{recursive:true})\" && tsr generate",
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
