--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.532.0",
-    "unenv": "2.0.0-rc.11",
+    "unenv": "^2.0.0",
     "minio": "^8.0.5",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
@@ -42,14 +42,16 @@
     "superjson": "^2.2.2",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.4",
-    "vinxi": "0.5.3",
+    "vinxi": "^0.5.8",
     "vite": "^6",
     "zod": "^3.25.0",
     "zustand": "^5.0.6"
   },
   "pnpm": {
     "overrides": {
-      "unenv": "2.0.0-rc.11"
+      "unenv": "^2.0.0",
+      "h3": "^1.13.1",
+      "nitro": "^2.9.0"
     }
   },
   "devDependencies": {
