--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "pnpm build",
-  "installCommand": "corepack enable && corepack prepare pnpm@9.12.3 --activate && pnpm install --no-frozen-lockfile"
+  "installCommand": "npm ci",
+  "buildCommand": "npm run build"
 }
