--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["src/*"],
+      "@/*": ["src/*"]
     },
     "noEmit": true
   }
