chore(vercel): set dist output and SPA fallback

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
-  "installCommand": "npm ci",
-  "buildCommand": "npm run build"
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
+  ]
 }
