--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    }
-  ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
-  ]
-}
+   "version": 2,
+   "framework": "vite",
+   "installCommand": "npm ci",
+   "buildCommand": "npm run build",
+   "outputDirectory": "dist",
+   "rewrites": [
+   { "source": "/api/:path*", "destination": "/api/:path*" },
+   { "source": "/trpc/:path*", "destination": "/api/trpc/:path*" },
+   { "source": "/(.*\\..*)", "destination": "/$1" },
+   { "source": "/(.*)", "destination": "/" }
+   ]
+ }
