--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,9 @@
 {
-   "version": 2,
-   "framework": "vite",
-   "installCommand": "npm ci",
-   "buildCommand": "npm run build",
-   "outputDirectory": "dist",
-   "rewrites": [
-   { "source": "/api/:path*", "destination": "/api/:path*" },
-   { "source": "/trpc/:path*", "destination": "/api/trpc/:path*" },
-   { "source": "/(.*\\..*)", "destination": "/$1" },
-   { "source": "/(.*)", "destination": "/" }
-   ]
- }
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "rewrites": [
+    { "source": "/trpc/:path*", "destination": "/api/trpc" },
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
