--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "rewrites": [
-    { "source": "/trpc/:path*", "destination": "/api/trpc" },
-    { "source": "/(.*)", "destination": "/" }
-  ]
+  "functions": {
+    "api/**.{js,ts}": {
+      "runtime": "nodejs20.x"
+    }
+  }
 }
