--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "first-project",
-  "engines": { "node": "20.x" },
-  "packageManager": "pnpm@9.12.3",
   "scripts": {
-    "postinstall": "prisma generate && node -e \"require('fs').mkdirSync('src/generated/tanstack-router',{recursive:true})\" && tsr generate",
+    "postinstall": "prisma generate && tsr generate",
     "dev": "vinxi dev",
-    "build": "npm run codegen && vite build",
-    "codegen": "prisma generate && node -e \"require('fs').mkdirSync('src/generated/tanstack-router',{recursive:true})\" && tsr generate",
+    "build": "vinxi build",
     "start": "vinxi start",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . -c eslint.config.mjs --max-warnings 0",
@@ -32,9 +29,9 @@
     "@trpc/tanstack-react-query": "^11.1.2",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.532.0",
-    "unenv": "2.0.0-rc.11",
     "minio": "^8.0.5",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
@@ -45,27 +42,15 @@
     "superjson": "^2.2.2",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.4",
-    "vinxi": "^0.5.8",
-    "vite": "^6",
+    "vinxi": "0.5.8",
+    "vite": "^7.1.1",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "zod": "^3.25.0",
     "zustand": "^5.0.6"
-  },
-  "pnpm": {
-    "overrides": {
-      "unenv": "2.0.0-rc.11",
-      "h3": "^1.13.1",
-      "nitro": "^2.9.0"
-    }
-  },
-  "overrides": {
-    "unenv": "2.0.0-rc.11",
-    "h3": "1.13.1",
-    "nitro": "2.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@tanstack/eslint-plugin-router": "^1.115.0",
-    "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
@@ -74,11 +59,13 @@
     "eslint": "^9.25.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
+    "node-stdlib-browser": "^1.3.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.5.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.31.1",
+    "unenv": "^1.10.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "private": true,
