--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"],
-      "@/*": ["src/*"]
+      "~/*": ["./src/*"]
     },
     "noEmit": true
   }
