--- a/package.json
+++ b/package.json
@@ -28,30 +28,28 @@
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
     "autoprefixer": "^10.4.20",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.532.0",
     "minio": "^8.0.5",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
-    "react-hot-toast": "^2.5.2",
     "redaxios": "^0.5.1",
     "superjson": "^2.2.2",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.4",
-    "vinxi": "0.5.8",
-    "vite": "^7.1.1",
-    "vite-plugin-node-polyfills": "^0.24.0",
+    "vinxi": "0.5.3",
+    "vite": "^6",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "zod": "^3.25.0",
+    "lucide-react": "^0.532.0",
+    "react-hot-toast": "^2.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^3.0.2",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@tanstack/eslint-plugin-router": "^1.115.0",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -59,14 +57,14 @@
     "eslint": "^9.25.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
-    "node-stdlib-browser": "^1.3.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.5.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.31.1",
-    "unenv": "^1.10.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/bcryptjs": "^3.0.0"
   },
   "private": true,
   "type": "module"
