--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-  "version": 2,
-  "buildCommand": "npm ci && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": null,
   "functions": {
-    "api/**/*.ts": { "runtime": "nodejs20.x" },
-    "api/**/*.js": { "runtime": "nodejs20.x" }
+    "api/**/*": {
+      "runtime": "nodejs22.x",
+      "memory": 512,
+      "maxDuration": 10
+    }
   },
-  "routes": [
-    { "src": "/api/trpc(?:/.*)?", "dest": "/api/trpc/[trpc].ts" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/api/trpc/(.*)", "destination": "/api/trpc/[trpc]" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
