--- a/tsr.config.json
+++ b/tsr.config.json
@@ -1,11 +1,4 @@
 {
-  "installCommand": "npm ci",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "functions": {
-    "api/**": { "runtime": "nodejs20.x" }
-  },
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  "routeTreeFileHeader": ["// noinspection JSUnusedGlobalSymbols"],
+  "generatedRouteTree": "./src/generated/tanstack-router/routeTree.gen.ts"
 }
