--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
-{
+/*{
   "build": {
     "command": "npm run vercel-build",
     "output": "dist"
@@ -8,5 +8,24 @@
     { "src": "/trpc/(.*)", "dest": "/trpc" },
     { "src": "/api/debug/(.*)", "dest": "/api/debug/client-logs" },
     { "src": "/(.*)", "dest": "/client" }
+  ]
+}*/
+
+{
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "version": 2,
+  "installCommand": "npm ci",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "functions": {
+    "api/**/*": {
+      "runtime": "nodejs20.x",
+      "memory": 512,
+      "maxDuration": 10
+    }
+  },
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/" }
   ]
 }
