--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,3 @@
-/*{
-  "build": {
-    "command": "npm run vercel-build",
-    "output": "dist"
-  },
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/trpc/(.*)", "dest": "/trpc" },
-    { "src": "/api/debug/(.*)", "dest": "/api/debug/client-logs" },
-    { "src": "/(.*)", "dest": "/client" }
-  ]
-}*/
-
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
@@ -24,8 +11,20 @@
       "maxDuration": 10
     }
   },
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/" }
+  "rewrites": [
+    { "source": "/api/:path*", "destination": "/api/:path*" },
+    { "source": "/:path*", "destination": "/" }
   ]
 }
+/*{
+  "build": {
+    "command": "npm run vercel-build",
+    "output": "dist"
+  },
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/trpc/(.*)", "dest": "/trpc" },
+    { "src": "/api/debug/(.*)", "dest": "/api/debug/client-logs" },
+    { "src": "/(.*)", "dest": "/client" }
+  ]
+}*/
