--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
   "installCommand": "npm ci",
   "buildCommand": "npm run build",
@@ -13,6 +12,6 @@
   },
   "rewrites": [
     { "source": "/api/:path*", "destination": "/api/:path*" },
-    { "source": "/:path*", "destination": "/" }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
