--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "vercel-build": "prisma generate && vinxi build"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
