--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^4.0.0",
+    "app.config.ts": "^1.0.1",
     "eslint": "^9.25.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
