Adding Vercel.json for timeout 4

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "functions": {
-    "api/**/*.{js,mjs,cjs,ts}": { "maxDuration": 20 },
-    "server/**/*.{js,mjs,cjs,ts}": { "maxDuration": 20 }
+    "server/**/*/*.{js,mjs,cjs,ts}": { "maxDuration": 20 }
   }
 }
