Adding Vercel.json for timeout 5

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "functions": {
-    "server/**/*/*.{js,mjs,cjs,ts}": { "maxDuration": 20 }
+    "~/server/**/*/*.{js,mjs,cjs,ts}": { "maxDuration": 20 }
   }
 }
