--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "functions": {
-    "~/server/**/*/*.{js,mjs,cjs,ts}": { "maxDuration": 20 }
+    "src/server/trpc/procedures/*.ts": { "maxDuration": 20 }
   }
 }
