--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "pages/api/**/**/*.js": {
+    "api/**/**/*.js": {
       "maxDuration": 30
     }
   }
